--- a/SecondBrain/appsettings.json
+++ b/SecondBrain/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Data Source=LAPTOP-HNLSA88N\\THANHTHANH6THANH;Initial Catalog=SecondBrain;User Id=sa;Password=123;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
+    "default": "Data Source=LAPTOP-HNLSA88N\\WINCCPLUSMIG2014;Initial Catalog=SecondBrain;User Id=sa;Password=123;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True"
   }
 }
